--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username:  $ {{ secrets.DOCKERHUB_USERNAME }}
-          password:  $ {{ secrets.DOCKERHUB }}
+          password:  $ {{ secrets.DOCKERHUB_TOKEN }}
 
       # 6. 构建并推送 Docker 镜像
       - name: Build and push Docker image
