fix: 修复删除仓库时级联删除charts记录和同步失败时状态更新问题
- 在HelmRepositoryService.delete()中添加级联删除charts表记录的逻辑
- 修复syncRepositoryInternal()中异常时无法保存错误状态的问题，使用REQUIRES_NEW事务传播
- 在docker-compose.yml中添加容器级别的HTTP/HTTPS代理配置，解决容器内访问外部URL失败的问题

🤖 Generated with [Qoder](https://qoder.com)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       TZ: Asia/Shanghai
     networks:
       - helm-proxy
+    volumes:
+      - mysql_data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot_password"]
       interval: 10s
@@ -28,6 +30,9 @@ services:
       DB_USERNAME: helm_user
       DB_PASSWORD: HelmProxy@2026!
       TZ: Asia/Shanghai
+      HTTP_PROXY: http://192.168.80.2:10909/
+      HTTPS_PROXY: http://192.168.80.2:10909/
+      NO_PROXY: localhost,127.0.0.1,mysql
     networks:
       - helm-proxy
     depends_on:
@@ -37,3 +42,11 @@ services:
 networks:
   helm-proxy:
     driver: bridge
+
+volumes:
+  mysql_data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: './mysql/data'
