chore: 优化CI/CD工作流和项目配置
- 修复GitHub Actions工作流中Maven缓存路径的中文波浪号错误
- 添加paths过滤器，仅在源代码或构建相关文件变更时触发CI
- 在.gitignore中添加mysql/目录，忽略本地数据库数据
- 完善README文档，补充各功能模块的详细说明

🤖 Generated with [Qoder](https://qoder.com)

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -2,8 +2,12 @@ name: Build and Push Java App to Docker Hub
 
 on:
   push:
-    branches: [ main ]  # 可根据需要调整触发分支
-  # 也可以加上 tag 触发：tags: ['v*']
+    branches: [ main ]
+    paths: 
+      - 'src/**'
+      - 'pom.xml'
+      - 'Dockerfile'
+      - 'app_start.sh'
 
 jobs:
   build-and-push:
@@ -25,7 +29,7 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
-          path: ～/.m2/repository
+          path: ~/.m2/repository
           key:  $ {{ runner.os }}-m2- $ {{ hashFiles('**/pom.xml') }}
           restore-keys:  $ {{ runner.os }}-m2
 
